# slack-agent-mcp

./: .aider.md  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  MANIFEST.in  README.md  config.json.example  migration-slack-agent-mcp.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  slack_agent.py
.claude/: CLAUDE.md
.gemini/: GEMINI.md
dev_notes/: .gitignore
dev_notes/changes/: 2025-12-24_20-08-13_python-slack-notification-library-implementation.md  2025-12-25_10-18-03_humorous-demo-script-implementation.md  2025-12-25_11-02-00_slack-agent-mcp-extensions-implementation.md  2025-12-25_11-23-12_env-file-setup-implementation.md  2025-12-25_11-30-05_slack-agent-dotenv-support.md  2025-12-25_11-48-15_slack-agent-rtm-to-web-api-migration-implementation.md  2025-12-25_12-26-34_slack-agent-migration-completion-implementation.md  2025-12-25_12-29-34_slack-notifications-import-fix.md  (+7 more)
docs/: README.md  architecture.md  definition-of-done.md  development-guide.md  implementation-reference.md  mandatory.md  mcp-project-sync.md  mcp-service-setup.md  model-backend-concept.md  slack-agent-usage.md  slack-api-setup.md  templates.md  troubleshooting.md  workflows.md
docs/system-prompts/: README.md  (+4 more)
examples/: basic_usage.py  humorous_demo.py  milestone_notifications.py  model_config_example.yaml
planning/: 2025-12-24_19-54-39_python-slack-notification-library-plan.md  2025-12-24_19-54-39_python-slack-notification-library-summary.md  2025-12-25_10-17-24_humorous-demo-script-plan.md  2025-12-25_10-17-24_humorous-demo-script-summary.md  2025-12-25_10-52-29_slack-agent-mcp-extensions-summary.md  2025-12-25_11-22-05_env-file-setup-summary.md  2025-12-25_11-29-18_slack-agent-dotenv-support-plan.md  2025-12-25_11-29-18_slack-agent-dotenv-support-summary.md  2025-12-25_11-43-10_slack-agent-rtm-to-web-api-migration-summary.md  2025-12-25_12-23-20_slack-agent-migration-completion-plan.md  2025-12-25_12-23-20_slack-agent-migration-completion-summary.md  2025-12-25_22-48-06_model-backend-mapping-conceptual-change-summary.md  2026-01-29_23-54-58_adopt-standards-plan.md
slack_notifications/: __init__.py  exceptions.py  mcp_server.py  notifier.py
tests/: __init__.py  conftest.py  test_config.py  test_mcp_server.py  test_slack_agent.py
(+35 files in other folders)
